# citrus

./: ;  Cargo.toml  README.md  a.out  aaron.ct  core.c  floats.ct  full.ct  hello.ct  main.ct  new.ct  p66.ct  parsing.ct  project_euler1.ct  test.ct
.github/workflows/: rust.yml
src/: grammar.lalrpop  main.rs
src/ast/: lexer.rs  mod.rs  parser.rs
src/compiler/: mod.rs
src/types/: inference.rs  mod.rs
