[package]
name = "citrus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cranelift = "0.108.1"
cranelift-module = "0.108.1"
cranelift-object = "0.108.1"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
target-lexicon = "0.12.14"

[build-dependencies]
lalrpop = "0.20.2"
